<resources>
    <string name="app_name">Color Blocks</string>
    <string name="app_version">Version 1.02</string>

    <string name="description_body">
        "Color blocks"
        "\n"
        "In this game, there is a 4 by 4 grid. On each level, a number of blocks is being coloured"
        "equal to that level. The player has to remember the order in which the blocks are coloured"
        "and then, after the colouring has been done, he has to clicks the blocks that were coloured"
        "in the order the were coloured."
        "\n"
        "If the player misses the order, the game is done. The purpose of the game is to get as far"
        "as you can."
        "\n"
        "Enjoy!"
    </string>
    <string name="description_title">Description</string>
    <string name="title_activity_info">About game</string>

    <string name="score">Score</string>
    <string name="level">Level</string>
    <string name="title_activity_game_over">GameOverActivity</string>

    <string name="current_stage">%1$d</string>

    <string name="username_text">Please enter your username:</string>
    <string name="username_placeholder">Username</string>
    <string name="username_submit">Submit</string>

    <string name="game_over">GAME OVER</string>

    <string name="podium"> </string>
    <string name="podium1">%1$s\n%2$d</string>
    <string name="podium2">John\n%1$d</string>
    <string name="podium3">Vasile\n%1$d</string>
</resources>