<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blocks_background"
    tools:context=".game.BlocksActivity">

    <TextView
        android:id="@+id/title4"
        android:layout_width="415dp"
        android:layout_height="93dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="@color/purple_700"
        android:shadowDx="@dimen/shadow"
        android:shadowDy="@dimen/shadow"
        android:shadowRadius="@dimen/shadow"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/score_value"
        android:layout_width="187dp"
        android:layout_height="69dp"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315" />

    <TextView
        android:id="@+id/score_text"
        android:layout_width="187dp"
        android:layout_height="69dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/score"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/design_default_color_secondary_variant"
        android:textSize="40sp"
        android:textStyle="bold"
        android:shadowColor="@color/purple_700"
        android:shadowDx="@dimen/shadow"
        android:shadowDy="@dimen/shadow"
        android:shadowRadius="@dimen/shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

    <TextView
        android:id="@+id/level_value"
        android:layout_width="187dp"
        android:layout_height="69dp"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315" />

    <TextView
        android:id="@+id/level_text"
        android:layout_width="187dp"
        android:layout_height="69dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="@color/orange"
        android:shadowDx="@dimen/shadow"
        android:shadowDy="@dimen/shadow"
        android:shadowRadius="@dimen/shadow"
        android:text="@string/level"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/design_default_color_primary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

    <TableLayout
        android:layout_width="385dp"
        android:layout_height="419dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_1"
                android:layout_width="wrap_content"
                android:layout_height="98dp"
                android:layout_marginEnd="2.5dp"
                android:layout_marginBottom="5.0dp"
                android:onClick="handleClick" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="wrap_content"
                android:layout_height="98dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginBottom="5.0dp"
                android:onClick="handleClick" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="wrap_content"
                android:layout_height="98dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginBottom="5.0dp"
                android:onClick="handleClick" />

            <Button
                android:id="@+id/button_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="2.5dp"
                android:layout_marginBottom="5.0dp"
                android:onClick="handleClick"
                android:padding="@dimen/fab_margin"
                android:paddingStart="@dimen/fab_margin"
                android:paddingLeft="@dimen/fab_margin"
                android:paddingTop="@dimen/fab_margin"
                android:paddingEnd="@dimen/fab_margin"
                android:paddingRight="@dimen/fab_margin"
                android:paddingBottom="@dimen/fab_margin" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_5"
                android:layout_width="wrap_content"
                android:layout_height="98dp"
                android:layout_marginEnd="2.5dp"
                android:layout_marginBottom="5.0dp"
                android:onClick="handleClick" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="wrap_content"
                android:layout_height="98dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginBottom="5.0dp"
                android:onClick="handleClick" />

            <Button
                android:id="@+id/button_7"
                android:layout_width="wrap_content"
                android:layout_height="98dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginBottom="5.0dp"
                android:onClick="handleClick" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="2.5dp"
                android:layout_marginBottom="5.0dp"
                android:onClick="handleClick"
                android:padding="@dimen/fab_margin"
                android:paddingStart="@dimen/fab_margin"
                android:paddingLeft="@dimen/fab_margin"
                android:paddingTop="@dimen/fab_margin"
                android:paddingEnd="@dimen/fab_margin"
                android:paddingRight="@dimen/fab_margin"
                android:paddingBottom="@dimen/fab_margin" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_9"
                android:layout_width="wrap_content"
                android:layout_height="98dp"
                android:layout_marginEnd="2.5dp"
                android:layout_marginBottom="5.0dp"
                android:onClick="handleClick" />

            <Button
                android:id="@+id/button_10"
                android:layout_width="wrap_content"
                android:layout_height="98dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginBottom="5.0dp"
                android:onClick="handleClick"/>

            <Button
                android:id="@+id/button_11"
                android:layout_width="wrap_content"
                android:layout_height="98dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginBottom="5.0dp"
                android:onClick="handleClick"/>

            <Button
                android:id="@+id/button_12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="2.5dp"
                android:layout_marginBottom="5.0dp"
                android:onClick="handleClick"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_13"
                android:layout_width="wrap_content"
                android:layout_height="98dp"
                android:layout_marginEnd="2.5dp"
                android:layout_marginBottom="5.0dp"
                android:onClick="handleClick"/>

            <Button
                android:id="@+id/button_14"
                android:layout_width="wrap_content"
                android:layout_height="98dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginBottom="5.0dp"
                android:onClick="handleClick"/>

            <Button
                android:id="@+id/button_15"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginBottom="5.0dp"
                android:onClick="handleClick"/>

            <Button
                android:id="@+id/button_16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="2.5dp"
                android:layout_marginBottom="5.0dp"
                android:padding="@dimen/fab_margin"
                android:paddingStart="@dimen/fab_margin"
                android:paddingLeft="@dimen/fab_margin"
                android:paddingTop="@dimen/fab_margin"
                android:paddingEnd="@dimen/fab_margin"
                android:paddingRight="@dimen/fab_margin"
                android:paddingBottom="@dimen/fab_margin"
                android:onClick="handleClick" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>